# echo

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Package.resolved  README.md  biome.json  components.json  cspell.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
Echo.xcodeproj/: project.pbxproj
docs/: Echo-0.0.1.html  Echo-0.0.2.html  appcast.xml
echo/: App.swift  AppIcon.icns  Constants.swift  Info.plist  echo.entitlements  echoRelease.entitlements
echo/Components/: AudioControlsView.swift  PermissionStatusView.swift
echo/Models/: AppState.swift  AudioRecorder.swift  TranscriptionHistory.swift  TranscriptionResult.swift
echo/Services/: AudioPlayerManager.swift  AudioStorageManager.swift  DisplayManager.swift  GlobalShortcutMonitor.swift  GroqClient.swift  HistoryManager.swift  HotkeyManager.swift  KeychainManager.swift  LaunchAtLogin.swift  MultipartFormDataBuilder.swift  PasteService.swift  PermissionManager.swift  SettingsManager.swift  TempFileManager.swift  TranscriptionService.swift  UpdateManager.swift
echo/ViewModels/: TranscriptionViewModel.swift
echo/Views/: HistoryView.swift  OnboardingView.swift  OverlayView.swift  SettingsView.swift
scripts/: changelog-to-html.sh  release.sh  reset-tcc.sh
src/: main.tsx  styles.css  types.ts  util.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: AppIcon.icns
src-tauri/src/: accessibility.rs  audio.rs  config.rs  download.rs  main.rs  paste.rs  record.rs  whisper.rs
src/store/: models.ts  (+2 more)
(+27 files in other folders)
